Fix radio / checkbox spacing (#105)

--- a/scss/base/variables/_forms.scss
+++ b/scss/base/variables/_forms.scss
@@ -288,7 +288,7 @@ $input-inverted-color-placeholder:              $input-color;
 
 $checkbox-label-spacing:                1.5em;
 $checkbox-siblings-spacing-top:         0.3em;
-$checkbox-spacing-left:                 0.2em;
+$checkbox-spacing-left:                 0;
 $checkbox-bg-color:                     $input-bg;
 $checkbox-bg-color-focus:               $input-bg;
 $checkbox-bg-color-checked:             $input-bg;
